--- a/FrontEnd/admin/Dashboard.html
+++ b/FrontEnd/admin/Dashboard.html
@@ -3,150 +3,96 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Dashboard</title>
-    <link rel="stylesheet" href="admin/styles.css"type="text/css">
+    <title>Movie Dashboard</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <style>
-        * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-}
-
-.container {
-    display: flex;
-}
-
-.sidebar {
-    width: 250px;
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
-    min-height: 100vh;
-}
-
-.sidebar h2 {
-    margin-bottom: 20px;
-}
-
-.sidebar ul {
-    list-style: none;
-}
-
-.sidebar ul li {
-    margin-bottom: 10px;
-}
-
-.sidebar ul li a {
-    text-decoration: none;
-    color: #fff;
-    display: block;
-    padding: 10px;
-    background-color: #444;
-    border-radius: 5px;
-}
-
-.sidebar ul li a:hover {
-    background-color: #555;
-}
-
-.main-content {
-    flex-grow: 1;
-    padding: 20px;
-}
-
-header {
-    margin-bottom: 30px;
-}
-
-.stats-summary {
-    display: flex;
-    gap: 20px;
-    margin-bottom: 20px;
-}
-
-.card {
-    flex: 1;
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    text-align: center;
-}
-
-.card h3 {
-    margin-bottom: 10px;
-}
-
-.charts {
-    display: flex;
-    gap: 20px;
-}
-
-.chart {
-    flex: 1;
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-}
-
-    </style>
     <div class="container">
-        <aside class="sidebar">
-            <h2>Admin Panel</h2>
-            <ul>
-                <li><a href="admin/dashboard.html">Dashboard</a></li>
-                <li><a href="admin/manage_movies.html">Manage Movies</a></li>
-                <li><a href="admin/manage_categories.html">Manage Categories</a></li>
-                <li><a href="admin/manage_actors.html">Manage Actors</a></li>
-                <li><a href="admin/manage_users.html">Manage Users</a></li>
-                <li><a href="admin/statistics.html">Statistics</a></li>
-            </ul>
-        </aside>
-    </div>    
-        <main class="main-content">
-            <header>
-                <h1>Dashboard</h1>
-                <div class="stats-summary">
-                    <div class="card">
-                        <h3>Total Movies</h3>
-                        <p>120</p>
-                    </div>
-                    <div class="card">
-                        <h3>Total Users</h3>
-                        <p>450</p>
-                    </div>
-                    <div class="card">
-                        <h3>Today's Views</h3>
-                        <p>2,300</p>
-                    </div>
-                    <div class="card">
-                        <h3>New Movies</h3>
-                        <p>15</p>
-                    </div>
+        <!-- Sidebar -->
+        <div class="sidebar">
+            <h2>Movie Dashboard</h2>
+            <a href="Dashboard.html">Dashboard</a>
+            <a href="movies.html">Movies</a>
+            <a href="categories.html">Categories</a>
+            <a href="users.html">Users</a>
+            <a href="reviews.html" class="active">Reviews</a>
+            <a href="settings.html">Settings</a>
+        </div>
+
+        <!-- Main Content -->
+        <div class="main">
+            <div class="header">
+                <h1>Analytics</h1>
+                <img src="https://via.placeholder.com/40" alt="User Avatar">
+            </div>
+
+            <div class="stats">
+                <div class="card">
+                    <h3>Top Movies</h3>
+                    <p>12,500 Views</p>
                 </div>
-            </header>
-            <section class="charts">
-                <div class="chart">
-                    <h2>Movies by Views</h2>
-                    <canvas id="viewsChart"></canvas>
+                <div class="card">
+                    <h3>Users</h3>
+                    <p>3,450 Registered</p>
                 </div>
-                <div class="chart">
-                    <h2>Movies by Ratings</h2>
-                    <canvas id="ratingsChart"></canvas>
+                <div class="card">
+                    <h3>New Reviews</h3>
+                    <p>780 This Week</p>
                 </div>
-            </section>
-        </main>
+                <div class="card">
+                    <h3>Revenue</h3>
+                    <p>$25,600</p>
+                </div>
+            </div>
+
+            <div class="chart">
+                <div>
+                    <h3>Movie Views</h3>
+                    <p>Placeholder for views chart</p>
+                </div>
+                <div>
+                    <h3>User Signups</h3>
+                    <p>Placeholder for user chart</p>
+                </div>
+            </div>
+
+            <div class="products">
+                <h3>Popular Movies</h3>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Movie</th>
+                            <th>Category</th>
+                            <th>Views</th>
+                            <th>Rating</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Avengers: Endgame</td>
+                            <td>Action</td>
+                            <td>1,500,000</td>
+                            <td>9.5</td>
+                        </tr>
+                        <tr>
+                            <td>The Lion King</td>
+                            <td>Animation</td>
+                            <td>980,000</td>
+                            <td>8.9</td>
+                        </tr>
+                        <tr>
+                            <td>Inception</td>
+                            <td>Sci-Fi</td>
+                            <td>1,200,000</td>
+                            <td>9.0</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="dashboard.js"></script>
 </body>
 </html>
