--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -201,7 +201,7 @@
                 </div>
                 <div class="col-lg-3">
                     <p>
-                      Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="" target=""></a>
+                     <!--     Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="" target="">Colorlib</a> -->
                       </p>
                 </div>
             </div>
