--- a/FrontEnd/admin/Dashboard.html
+++ b/FrontEnd/admin/Dashboard.html
@@ -16,9 +16,11 @@
             <a href="Dashboard.html">Dashboard</a>
             <a href="movies.html">Movies</a>
             <a href="categories.html">Categories</a>
+            <a href="actors.html">Actors & Directors</a>
             <a href="users.html">Users</a>
             <a href="reviews.html" class="active">Reviews</a>
-            <a href="settings.html">Settings</a>
+            <a href="#" id="logoutButton">Logout</a>
+
         </div>
 
         <!-- Main Content -->
@@ -93,6 +95,6 @@
             </div>
         </div>
     </div>
-
+    <script src="adminjs/jsAdmin.js" type="module"></script>
 </body>
 </html>
