--- a/FrontEnd/admin/movies.html
+++ b/FrontEnd/admin/movies.html
@@ -14,9 +14,10 @@
             <a href="Dashboard.html">Dashboard</a>
             <a href="movies.html" class="active">Movies</a>
             <a href="categories.html">Categories</a>
+            <a href="actors.html">Actors & Directors</a>
             <a href="users.html">Users</a>
             <a href="reviews.html">Reviews</a>
-            <a href="settings.html">Settings</a>
+            <a href="#" id="logoutButton">Logout</a>
         </div>
 
         <div class="main">
@@ -30,22 +31,24 @@
                 <table>
                     <thead>
                         <tr>
-                            <th>Movie</th>
-                            <th>Category</th>
-                            <th>Views</th>
-                            <th>Rating</th>
+                            <th>movie id</th> 
+                            <th>title</th> 
+                            <th>Category</th> 
+                            <th>Rating</th> 
+                            <th>Release Date</th>
+                            <th>Description</th>
+                            <th>Poster</th>
+                            <th>Video URL</th> 
+                            <th>Movie Length</th> 
+                            <th>Created At</th> 
                             <th>Actions</th>
                         </tr>
                     </thead>
-                    <tbody>
+                    <tbody id="movies-list">
                         <tr>
-                            <td>Avengers: Endgame</td>
-                            <td>Action</td>
-                            <td>1,500,000</td>
-                            <td>9.5</td>
-                            <td><button>Edit</button> <button>Delete</button></td>
+                           
                         </tr>
-                        <!-- Add more movie rows here -->
+                        
                     </tbody>
                 </table>
             </div>
