--- a/FrontEnd/admin/actors.html
+++ b/FrontEnd/admin/actors.html
@@ -3,31 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quản lý Diễn viên</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css">
+    <title>Quản lý Diễn viên & Đạo diễn</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container-fluid">
-        <div class="row">
-            <nav class="col-md-3 col-lg-2 d-md-block bg-light sidebar">
-                <h2 class="text-center py-3">Admin Dashboard</h2>
-                <ul class="nav flex-column">
-                    <li class="nav-item"><a class="nav-link" href="actors.html">Quản lý diễn viên</a></li>
-                    <li class="nav-item"><a class="nav-link" href="movies.html">Quản lý phim</a></li>
-                    <li class="nav-item"><a class="nav-link" href="categories.html">Quản lý thể loại</a></li>
-                    <li class="nav-item"><a class="nav-link" href="users.html">Quản lý người dùng</a></li>
-                    <li class="nav-item"><a class="nav-link" href="reviews.html">Quản lý đánh giá</a></li>
-                </ul>
-            </nav>
+    <div class="container">
+        <div class="sidebar">
+            <h2>Movie Dashboard</h2>
+            <a href="Dashboard.html">Dashboard</a>
+            <a href="movies.html">Movies</a>
+            <a href="categories.html">Categories</a>
+            <a href="actors.html" class="active">Actors & Directors</a>
+            <a href="users.html">Users</a>
+            <a href="reviews.html">Reviews</a>
+            <a href="#" id="logoutButton">Logout</a>
+        </div>
 
-            <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-                <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                    <h1 class="h2">Quản lý Diễn viên</h1>
-                </div>
+        <div class="main">
+            <div class="header">
+                <h1>Quản lý Diễn viên & Đạo diễn</h1>
+                <img src="/api/placeholder/40/40" alt="User Avatar">
+            </div>
 
-                <div class="table-responsive">
-                    <table class="table table-striped table-sm">
+            <div class="toggle-view">
+                <button id="actorViewBtn" class="active">Diễn viên</button>
+                <button id="directorViewBtn">Đạo diễn</button>
+            </div>
+
+            <div id="actorView">
+                <div class="products">
+                    <h3>Danh sách Diễn viên</h3>
+                    <table>
                         <thead>
                             <tr>
                                 <th>ID</th>
@@ -42,19 +48,48 @@
                         </tbody>
                     </table>
                 </div>
-            </main>
+
+                <div class="add-actor">
+                    <h3>Thêm Diễn viên mới</h3>
+                    <form id="add-actor-form">
+                        <input type="text" id="actorName" placeholder="Tên diễn viên" required>
+                        <input type="date" id="actorBirthday" required>
+                        <textarea id="actorBio" placeholder="Tiểu sử" required></textarea>
+                        <button type="submit">Thêm Diễn viên</button>
+                    </form>
+                </div>
+            </div>
+
+            <div id="directorView" style="display: none;">
+                <div class="products">
+                    <h3>Danh sách Đạo diễn</h3>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>ID</th>
+                                <th>Tên đạo diễn</th>
+                                <th>Ngày sinh</th>
+                                <th>Tiểu sử</th>
+                                <th>Thao tác</th>
+                            </tr>
+                        </thead>
+                        <tbody id="directors-list">
+                            <!-- Danh sách đạo diễn sẽ được load ở đây -->
+                        </tbody>
+                    </table>
+                </div>
+
+                <div class="add-director">
+                    <h3>Thêm Đạo diễn mới</h3>
+                    <form id="add-director-form">
+                        <input type="text" id="directorName" placeholder="Tên đạo diễn" required>
+                        <input type="date" id="directorBirthday" required>
+                        <textarea id="directorBio" placeholder="Tiểu sử" required></textarea>
+                        <button type="submit">Thêm Đạo diễn</button>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
-
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
-    <script src="main.js"></script>
-    <script>
-        // Gọi API để lấy danh sách diễn viên khi load trang
-        document.addEventListener('DOMContentLoaded', function() {
-            checkAuth();  // Xác thực người dùng
-            getActors();  // Lấy danh sách diễn viên
-        });
-    </script>
 </body>
 </html>
