--- a/FrontEnd/admin/reviews.html
+++ b/FrontEnd/admin/reviews.html
@@ -14,9 +14,10 @@
             <a href="Dashboard.html">Dashboard</a>
             <a href="movies.html">Movies</a>
             <a href="categories.html">Categories</a>
+            <a href="actors.html">Actors & Directors</a>
             <a href="users.html">Users</a>
             <a href="reviews.html" class="active">Reviews</a>
-            <a href="settings.html">Settings</a>
+            <a href="#" id="logoutButton">Logout</a>
         </div>
 
         <div class="main">
