--- a/FrontEnd/admin/users.html
+++ b/FrontEnd/admin/users.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manage Users</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="adminStyleCss/styles.css">
 </head>
 <body>
 
@@ -23,7 +23,7 @@
         <div class="main">
             <div class="header">
                 <h1>Manage Users</h1>
-                <img src="https://via.placeholder.com/40" alt="User Avatar">
+                <img src="C:\Users\manno\OneDrive\Desktop\WebMovieOnline\FrontEnd\img\avtadmin.png" alt="User Avatar">
             </div>
             <div class="products">
                 <h3>User List</h3>
