--- a/FrontEnd/admin/reviews.html
+++ b/FrontEnd/admin/reviews.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manage Reviews</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="adminStyleCss/styles.css">
 </head>
 <body>
 
