--- a/FrontEnd/anime-watching.html
+++ b/FrontEnd/anime-watching.html
@@ -99,7 +99,7 @@
                 <div class="col-lg-12">
                     <div class="anime__video__player">
                         <video id="player" playsinline controls data-poster="./videos/anime-watch.jpg">
-                            <source src="http://192.168.1.102:8080/gvXE" type="video/mp4" />
+                            <source src="https://bot-user-telegram.onrender.com/DUiH" type="video/mp4" />
                             <!-- Captions are optional -->
                             <track kind="captions" label="English captions" src="#" srclang="en" default />
                         </video>
