--- a/FrontEnd/admin/users.html
+++ b/FrontEnd/admin/users.html
@@ -23,7 +23,7 @@
         <div class="main">
             <div class="header">
                 <h1>Manage Users</h1>
-                <img src="C:\Users\manno\OneDrive\Desktop\WebMovieOnline\FrontEnd\img\avtadmin.png" alt="User Avatar">
+                <img src="https://icons.veryicon.com/png/o/miscellaneous/yellow-simple-icon/avatar-18.png" alt="User Avatar">
             </div>
             <div class="products">
                 <h3>User List</h3>
@@ -55,7 +55,7 @@
             </div>
         </div>
     </div>
-    <script src="adminjs/jsAdmin.js" type="module"></script>
+    <script type="module" src="adminjs/user-management.js"></script>
   
     
 
