--- a/FrontEnd/blog.html
+++ b/FrontEnd/blog.html
@@ -221,7 +221,7 @@
                             <li class="active"><a href="./index.html">Homepage</a></li>
                             <li><a href="./categories.html">Categories</a></li>
                             <li><a href="./blog.html">Our Blog</a></li>
-                            <li><a href="#">Contacts</a></li>
+                            <li><a href="./watch-history.html">Watch history</a></li>
                         </ul>
                     </div>
                 </div>
