--- a/FrontEnd/admin/Dashboard.html
+++ b/FrontEnd/admin/Dashboard.html
@@ -27,7 +27,7 @@
         <div class="main">
             <div class="header">
                 <h1>Analytics</h1>
-                <img src="https://via.placeholder.com/40" alt="User Avatar">
+                <img src="https://icons.veryicon.com/png/o/miscellaneous/yellow-simple-icon/avatar-18.png" alt="User Avatar">
             </div>
 
             <div class="stats">
