--- a/FrontEnd/admin/categories.html
+++ b/FrontEnd/admin/categories.html
@@ -23,7 +23,7 @@
         <div class="main">
             <div class="header">
                 <h1>Manage Categories</h1>
-                <img src="https://via.placeholder.com/40" alt="User Avatar">
+                <img src="https://icons.veryicon.com/png/o/miscellaneous/yellow-simple-icon/avatar-18.png" alt="User Avatar">
             </div>
 
             <div class="products">
