--- a/FrontEnd/admin/movies.html
+++ b/FrontEnd/admin/movies.html
@@ -23,14 +23,14 @@
         <div class="main">
             <div class="header">
                 <h1>Manage Movies</h1>
-                <img src="https://via.placeholder.com/40" alt="User Avatar">
+                <img src="https://icons.veryicon.com/png/o/miscellaneous/yellow-simple-icon/avatar-18.png" alt="User Avatar">
             </div>
 
             <div class="products">
                 <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 10px;">
                     <input type="text" id="searchInput" placeholder="Tìm kiếm phim..." onkeyup="searchMovies()" style="margin-right: 10px;">
                     
-                    <select id="categorySelect" onchange="filterByCategory()" style="margin-left: 70%;">
+                    <select id="categorySelect" onchange="filterByCategory()" style="margin-left: 65%;">
                         <option value="">Tất cả thể loại</option>
                         
                     </select>
