--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -46,8 +46,8 @@
                     <div class="header__nav">
                         <nav class="header__menu mobile-menu">
                             <ul>
-                                <li class="active"><a href="./index.html">Homepage</a></li>
-                                <li><a href="./categories.html">Categories <span class="arrow_carrot-down"></span></a>
+                                <li class="active"><a href="./index.html">Trang chủ</a></li>
+                                <li><a href="./categories.html?category=tat-ca-the-loai">Thể loại <span class="arrow_carrot-down"></span></a>
                                     <ul class="dropdown">
                                         <li><a href="./categories.html">Categories</a></li>
                                         <li><a href="./anime-details.html">Anime Details</a></li>
@@ -57,8 +57,8 @@
                                         <li><a href="./login.html">Login</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="./blog.html">Our Blog</a></li>
-                                <li><a href="./watch-history.html">Watch history</a></li>
+                                <li><a href="./blog.html">Blog</a></li>
+                                <li><a href="./watch-history.html">lịch sử xem</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -186,7 +186,7 @@
                 <div class="product__sidebar">
                     <div class="product__sidebar__view">
                         <div class="section-title">
-                            <h5>Top Views</h5>
+                            <h5>Xem nhiều nhất</h5>
                         </div>
                         <div class="filter__gallery" id="sidebarMovies"></div>
                     </div>
@@ -214,10 +214,10 @@
             <div class="col-lg-6">
                 <div class="footer__nav">
                     <ul>
-                        <li class="active"><a href="./index.html">Homepage</a></li>
-                        <li><a href="./categories.html">Categories</a></li>
-                        <li><a href="./blog.html">Our Blog</a></li>
-                        <li><a href="#">Contacts</a></li>
+                        <li class="active"><a href="./index.html">Trang chủ</a></li>
+                        <li><a href=#>Thể loại</a></li>
+                        <li><a href="./blog.html">Blog</a></li>
+                        <li><a href="./watch-history.html">Lịch sử xem</a></li>
                     </ul>
                 </div>
             </div>
@@ -299,7 +299,8 @@
 <script src="js/owl.carousel.min.js"></script>
 <script src="js/main.js"></script>
 <script src="admin/adminjs/movie-management.js" type="module"></script>
-
+<script src="admin/adminjs/categories-management.js" type="module"></script>
+</script>
 
 </body>
 
