--- a/FrontEnd/signup.html
+++ b/FrontEnd/signup.html
@@ -58,7 +58,6 @@
                                     </ul>
                                 </li>
                                 <li><a href="./blog.html">Our Blog</a></li>
-                                <li><a href="#">Contacts</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -82,7 +81,7 @@
                 <div class="col-lg-12 text-center">
                     <div class="normal__breadcrumb__text">
                         <h2>Sign Up</h2>
-                        <p>Welcome to the official Anime blog.</p>
+                        <p>ĐỒ ÁN CÔNG NGHỆ THÔNG TIN NHÓM 8.</p>
                     </div>
                 </div>
             </div>
@@ -168,7 +167,6 @@
                             <li class="active"><a href="./index.html">Homepage</a></li>
                             <li><a href="./categories.html">Categories</a></li>
                             <li><a href="./blog.html">Our Blog</a></li>
-                            <li><a href="#">Contacts</a></li>
                         </ul>
                     </div>
                 </div>
