--- a/FrontEnd/signup.html
+++ b/FrontEnd/signup.html
@@ -98,7 +98,7 @@
                         <h3>Sign Up</h3>
                         <form id="registerForm" name="registerForm">
                             <div class="input__item">
-                                <input type="text" name="username" placeholder="Email address" required>
+                                <input type="email" name="username" placeholder="Email address" required>
                                 <span class="icon_mail"></span>
                             </div>
                         
