--- a/FrontEnd/anime-details.html
+++ b/FrontEnd/anime-details.html
@@ -47,7 +47,7 @@
                     <nav class="header__menu mobile-menu">
                         <ul>
                             <li class="active"><a href="./index.html">Trang chủ</a></li>
-                            <li><a href=#>Thể loại <span class="arrow_carrot-down"></span></a>
+                            <li><a href="./categories.html?category=tat-ca-the-loai">Thể loại <span class="arrow_carrot-down"></span></a>
                                 <ul class="dropdown">
                                     <li><a href=#>Categories</a></li>
                                     <li><a href="./blog-details.html">Blog Details</a></li>
@@ -94,8 +94,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcrumb__links">
-                        <a href="./index.html"><i class="fa fa-home"></i> Home</a>
-                        <a href="./categories.html">Categories</a>
+                        <a href="./index.html"><i class="fa fa-home"></i> Trang Chủ</a>
                         <span>Romance</span>
                     </div>
                 </div>
@@ -193,7 +192,7 @@
                         <div class="footer__nav">
                             <ul>
                                 <li class="active"><a href="./index.html">Trang chủ</a></li>
-                                <li><a href=#>Thể loại</a></li>
+                                <li><a href="./categories.html?category=tat-ca-the-loai">Thể loại</a></li>
                                 <li><a href="./blog.html">Blog</a></li>
                                 <li><a href="watch-history.html">Lịch sử xem</a></li>
                             </ul>
@@ -246,7 +245,18 @@
         document.getElementById('logoutButton').addEventListener('click', logout);
         document.getElementById('userInfo').addEventListener('click', viewUserInfo);
         </script>
-
+        <script>
+            const searchForm = document.querySelector('.search-model-form');
+            const searchInput = document.getElementById('search-input');
+            
+            searchForm.addEventListener('submit', (event) => {
+              event.preventDefault();
+              const searchTerm = searchInput.value.trim();
+              if (searchTerm) {
+                window.location.href = `search-page.html?q=${encodeURIComponent(searchTerm)}`;
+              }
+            });
+            </script>
 
 <script type="module">
     import { loadMovieFormId } from './admin/adminjs/movie-management.js';
@@ -309,6 +319,7 @@
 });
 
 </script>
+<script src="admin/adminjs/categories-management.js" type="module"></script>
         
     </body>
 
