--- a/FrontEnd/search-page.html
+++ b/FrontEnd/search-page.html
@@ -62,7 +62,7 @@
                                 </ul>
                             </li>
                             <li><a href="./blog.html">Blog</a></li>
-                            <li class="active"><a href="./watch-history.html">Lịch sử xem</a></li>
+                            <li><a href="./watch-history.html">Lịch sử xem</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -96,24 +96,12 @@
   <section class="product spad">
     <div class="container">
         <div class="row">
-            <div class="col-lg-8">
+            <div class="col-lg-10">
                 <div class="template">
-                    <h2 class="template-title">Lịch sử xem</h2>
+                    <h2 class="template-title">Kết quả tìm kiếm:</h2>
                     <div class="loader2">
                     </div>
-                    <div class="history-list">   
-                    </div>
-                </div>
-            </div>
-
-            <!-- Sidebar -->
-            <div class="col-lg-4 col-md-6 col-sm-8">
-                <div class="product__sidebar">
-                    <div class="product__sidebar__view">
-                        <div class="section-title">
-                            <h5>Top Views</h5>
-                        </div>
-                        <div class="filter__gallery" id="sidebarMovies"></div>
+                    <div class="search-list">  
                     </div>
                 </div>
             </div>
@@ -154,8 +142,9 @@
       </div>
   </footer>
   <!-- Footer Section End -->
-        <!-- Search model Begin -->
-  <div class="search-model">
+
+<!-- Search model Begin -->
+<div class="search-model">
     <div class="h-100 d-flex align-items-center justify-content-center">
         <div class="search-close-switch"><i class="icon_close"></i></div>
         <form class="search-model-form">
@@ -163,7 +152,6 @@
         </form>
     </div>
 </div>
-
 
 <!-- Js Plugins -->
 <script>
@@ -212,19 +200,19 @@
         checkLoginStatus();
     });
     </script>
-    <script type="module" src="admin/adminjs/WatchHistory-management.js"></script>
-    <script>
-        const searchForm = document.querySelector('.search-model-form');
-        const searchInput = document.getElementById('search-input');
-        
-        searchForm.addEventListener('submit', (event) => {
-          event.preventDefault();
-          const searchTerm = searchInput.value.trim();
-          if (searchTerm) {
-            window.location.href = `search-page.html?q=${encodeURIComponent(searchTerm)}`;
-          }
-        });
-        </script>
+<script>
+    const searchForm = document.querySelector('.search-model-form');
+    const searchInput = document.getElementById('search-input');
+    
+    searchForm.addEventListener('submit', (event) => {
+      event.preventDefault();
+      const searchTerm = searchInput.value.trim();
+      if (searchTerm) {
+        window.location.href = `search-page.html?q=${encodeURIComponent(searchTerm)}`;
+      }
+    });
+    </script>
+<script src="admin/adminjs/categories-management.js" type="module"></script>
 <script src="js/jquery-3.3.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/player.js"></script>
@@ -233,8 +221,8 @@
 <script src="js/jquery.slicknav.js"></script>
 <script src="js/owl.carousel.min.js"></script>
 <script src="js/main.js"></script>
-<script src="admin/adminjs/movie-management.js" type="module"></script>
-<script src="admin/adminjs/categories-management.js" type="module"></script>
+<script src="admin/adminjs/search-management.js" type="module">
+</script>
 
 </body>
 
