--- a/FrontEnd/anime-watching.html
+++ b/FrontEnd/anime-watching.html
@@ -132,7 +132,7 @@
             <div class="row">
                 <div class="col-lg-8">
                     <div class="section-title">
-                        <h5>Reviews</h5>
+                        <h5>Bình luận</h5>
                     </div>
                     <div class="anime__details__review">
                       
@@ -141,10 +141,10 @@
                     </div>
                     <div class="anime__details__form">
                         <div class="section-title">
-                            <h5>Bình luận...</h5>
+                            <h5>Bình luận ngay!!</h5>
                         </div>
                         <form action="#">
-                            <textarea placeholder="Your Comment"></textarea>
+                            <textarea placeholder="Hãy viết bình luận vào đây....."></textarea>
                             <button type="submit"><i class="fa fa-location-arrow"></i> Gửi</button>
                         </form>
                     </div>
@@ -189,7 +189,7 @@
     <div class="h-100 d-flex align-items-center justify-content-center">
         <div class="search-close-switch"><i class="icon_close"></i></div>
         <form class="search-model-form">
-            <input type="text" id="search-input" placeholder="Search here.....">
+            <input type="text" id="search-input" placeholder="nhập tên phim muốn tìm.....">
         </form>
     </div>
 </div>
