--- a/FrontEnd/categories.html
+++ b/FrontEnd/categories.html
@@ -74,6 +74,7 @@
                         </a>
                         <div class="dropdown-menu">
                             <a href="#" id="userInfo">Thông tin chi tiết</a>
+                            <a href="./watch-history.html">lịch sử xem</a>
                             <a href="#" id="logoutButton">Đăng xuất</a>
                         </div>
                     </div>
@@ -93,7 +94,7 @@
                 <div class="col-lg-12">
                     <div class="breadcrumb__links">
                         <a href="./index.html"><i class="fa fa-home"></i> Home</a>
-                        <a href=#>Categories</a>
+                        <a href=#>Thể loại</a>
                         <span>Romance</span>
                     </div>
                 </div>
@@ -152,7 +153,7 @@
                     <div class="product__sidebar">
                         <div class="product__sidebar__view">
                             <div class="section-title">
-                                <h5>Top Views</h5>
+                                <h5>Xem nhiều nhất</h5>
                             </div>
                             <div class="filter__gallery" id="sidebarMovies"></div>
                         </div>
@@ -206,7 +207,7 @@
     <div class="h-100 d-flex align-items-center justify-content-center">
         <div class="search-close-switch"><i class="icon_close"></i></div>
         <form class="search-model-form">
-            <input type="text" id="search-input" placeholder="Search here.....">
+            <input type="text" id="search-input" placeholder="nhập tên phim muốn tìm.....">
         </form>
     </div>
 </div>
