--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -77,7 +77,9 @@
                         </a>
                         <div class="dropdown-menu">
                             <a href="resetpassword.html" id="userInfo">Đổi mật khẩu</a>
+                            <a href="./watch-history.html">lịch sử xem</a>
                             <a href="#" id="logoutButton">Đăng xuất</a>
+                         
                         </div>
                     </div>
                 </div>
@@ -144,12 +146,12 @@
                     <div class="row">
                         <div class="col-lg-8 col-md-8 col-sm-8">
                             <div class="section-title">
-                                <h4>Trending</h4>
+                                <h4>Phim Hot</h4>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-4 col-sm-4">
                             <div class="btn__all">
-                                <a href="#" class="primary-btn">Xem thêm <span class="arrow_right"></span></a>
+                                <a href="categories.html?category=tat-ca-the-loai" class="primary-btn">Xem thêm <span class="arrow_right"></span></a>
                             </div>
                         </div>
                     </div>
@@ -170,7 +172,7 @@
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-4">
                         <div class="btn__all">
-                            <a href="#" class="primary-btn">Xem thêm <span class="arrow_right"></span></a>
+                            <a href="categories.html?category=tat-ca-the-loai" class="primary-btn">Xem thêm <span class="arrow_right"></span></a>
                         </div>
                     </div>
                 </div>
@@ -236,7 +238,7 @@
     <div class="h-100 d-flex align-items-center justify-content-center">
         <div class="search-close-switch"><i class="icon_close"></i></div>
         <form class="search-model-form">
-            <input type="text" id="search-input" placeholder="Search here.....">
+            <input type="text" id="search-input" placeholder="nhập tên phim muốn tìm.....">
         </form>
     </div>
 </div>
