--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -45,18 +45,13 @@
                     <div class="header__nav">
                         <nav class="header__menu mobile-menu">
                             <ul>
-                                <li><a href="./index.html">Homepage</a></li>
-                                <li><a href="./categories.html">Categories <span class="arrow_carrot-down"></span></a>
+                                <li><a href="./index.html">Trang chủ</a></li>
+                                <li><a href="./categories.html">Thể loại <span class="arrow_carrot-down"></span></a>
                                     <ul class="dropdown">
-                                        <li><a href="./categories.html">Categories</a></li>
-                                        <li><a href="./anime-details.html">Anime Details</a></li>
-                                        <li><a href="./anime-watching.html">Anime Watching</a></li>
-                                        <li><a href="./blog-details.html">Blog Details</a></li>
-                                        <li><a href="./signup.html">Sign Up</a></li>
-                                        <li><a href="./login.html">Login</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="./blog.html">Our Blog</a></li>
+                                <li class="active"><a href="#">Đăng nhập</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -79,7 +74,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="normal__breadcrumb__text">
-                        <h2>Login</h2>
+                        <h2>ĐĂNG NHẬP</h2>
                         <p>ĐỒ ÁN CÔNG NGHỆ THÔNG TIN NHÓM 8.</p>
                     </div>
                 </div>
@@ -94,17 +89,17 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="login__form">
-                        <h3>Login</h3>
+                        <h3>Đăng nhập</h3>
                         <form id="loginForm" name="login__form">
                             <div class="input__item">
-                                <input type="text" name="username" placeholder="Email address" required>
+                                <input type="text" name="username" placeholder="Email " required>
                                 <span class="icon_mail"></span>
                             </div>
                             <div class="input__item">
-                                <input type="password" name="password" placeholder="Password" required>
+                                <input type="password" name="password" placeholder="Mật khẩu" required>
                                 <span class="icon_lock"></span>
                             </div>
-                            <button type="submit" class="site-btn">Login Now</button>
+                            <button type="submit" class="site-btn">Đăng nhập ngay </button>
                         </form>
                         
                         <script>
@@ -148,13 +143,13 @@
 
                         </script>
                         
-                        <a href="#" class="forget_pass">Forgot Your Password?</a>
+                        <a href="#" class="forget_pass">Quên mật khẩu?</a>
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="login__register">
-                        <h3>Don’t Have An Account?</h3>
-                        <a href="./signup.html" class="primary-btn">Register Now</a>
+                        <h3>Bạn chưa có tài khoản ?</h3>
+                        <a href="./signup.html" class="primary-btn">Đăng ký ngay</a>
                     </div>
                 </div>
             </div>
@@ -162,11 +157,11 @@
                 <div class="row d-flex justify-content-center">
                     <div class="col-lg-6">
                         <div class="login__social__links">
-                            <span>or</span>
+                            <span>hoặc</span>
                             <ul>
-                                <li><a href="#" class="facebook"><i class="fa fa-facebook"></i> Sign in With Facebook</a></li>
-                                <li><a href="#" class="google"><i class="fa fa-google"></i> Sign in With Google</a></li>
-                                <li><a href="#" class="twitter"><i class="fa fa-twitter"></i> Sign in With Twitter</a></li>
+                                <li><a href="#" class="facebook"><i class="fa fa-facebook"></i> Đăng nhập với Facebook</a></li>
+                                <li><a href="#" class="google"><i class="fa fa-google"></i> Đăng nhập với Google</a></li>
+                                <li><a href="#" class="twitter"><i class="fa fa-twitter"></i> Đăng nhập với Twitter</a></li>
                             </ul>
                         </div>
                     </div>
@@ -191,9 +186,10 @@
                 <div class="col-lg-6">
                     <div class="footer__nav">
                         <ul>
-                            <li class="active"><a href="./index.html">Homepage</a></li>
-                            <li><a href="./categories.html">Categories</a></li>
-                            <li><a href="./blog.html">Our Blog</a></li>
+                            <li class="active"><a href="./index.html">Trang chủ</a></li>
+                            <li><a href="./categories.html">Thể loại</a></li>
+                            <li><a href="./blog.html">Blog</a></li>
+                            <li class="active"><a href="#">Đăng nhập</a></li>
                         </ul>
                     </div>
                 </div>
