--- a/FrontEnd/admin/actors.html
+++ b/FrontEnd/admin/actors.html
@@ -9,14 +9,14 @@
 <body>
     <div class="container">
         <div class="sidebar">
-            <h2>Movie Dashboard</h2>
+            <h2>Trang Quản Lý</h2>
             <a href="Dashboard.html">Dashboard</a>
-            <a href="movies.html">Movies</a>
-            <a href="categories.html">Categories</a>
-            <a href="actors.html" class="active">Actors & Directors</a>
-            <a href="users.html">Users</a>
-            <a href="reviews.html">Reviews</a>
-            <a href="#" id="logoutButton">Logout</a>
+            <a href="movies.html">Quản lý phim</a>
+            <a href="categories.html">Danh sách thể loại</a>
+            <a href="actors.html" class="active">Đạo diễn & diễn viên</a>
+            <a href="users.html">Người dùng</a>
+            <a href="reviews.html">Bình luận</a>
+            <a href="#" id="logoutButton">Đăng xuất</a>
         </div>
 
         <div class="main">
