--- a/FrontEnd/admin/categories.html
+++ b/FrontEnd/admin/categories.html
@@ -3,31 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manage Categories</title>
+    <title>Quản lý thể loại phim</title>
     <link rel="stylesheet" href="adminStyleCss/styles.css">
 </head>
 <body>
 
     <div class="container">
         <div class="sidebar">
-            <h2>Movie Dashboard</h2>
+            <h2>Trang Quản Lý</h2>
             <a href="Dashboard.html">Dashboard</a>
-            <a href="movies.html">Movies</a>
-            <a href="categories.html" class="active">Categories</a>
-            <a href="actors.html">Actors & Directors</a>
-            <a href="users.html">Users</a>
-            <a href="reviews.html">Reviews</a>
-            <a href="#" id="logoutButton">Logout</a>
+            <a href="movies.html">Quản lý phim</a>
+            <a href="categories.html" class="active">Danh sách thể loại</a>
+            <a href="actors.html">Đạo diễn & diễn viên</a>
+            <a href="users.html">Người dùng</a>
+            <a href="reviews.html">Bình luận</a>
+            <a href="#" id="logoutButton">Đăng xuất</a>
         </div>
 
         <div class="main">
             <div class="header">
-                <h1>Manage Categories</h1>
+                <h1>Quản lý thể loại phim</h1>
                 <img src="https://icons.veryicon.com/png/o/miscellaneous/yellow-simple-icon/avatar-18.png" alt="User Avatar">
             </div>
             
             <div class="products">
-                <h3>Category List</h3>
+                <h3>Danh sách thể loại</h3>
                 <table>
                     <thead>
                         <tr>
@@ -43,11 +43,11 @@
                 </table>
             </div>
             <div class="add-category">
-                <h3>Add New Category</h3>
+                <h3>Thêm thể loại mới</h3>
                 <form>
-                    <input type="text" placeholder="Category Name" required>
+                    <input type="text" placeholder="Tên thể loại" required>
                     <input type="text" placeholder="slug" required>
-                    <button type="submit">Add Category</button>
+                    <button type="submit">Thêm</button>
                 </form>
             </div>
            
