--- a/FrontEnd/admin/reviews.html
+++ b/FrontEnd/admin/reviews.html
@@ -10,32 +10,32 @@
 
     <div class="container">
         <div class="sidebar">
-            <h2>Movie Dashboard</h2>
+            <h2>Trang Quản Lý</h2>
             <a href="Dashboard.html">Dashboard</a>
-            <a href="movies.html">Movies</a>
-            <a href="categories.html">Categories</a>
-            <a href="actors.html">Actors & Directors</a>
-            <a href="users.html">Users</a>
-            <a href="reviews.html" class="active">Reviews</a>
-            <a href="#" id="logoutButton">Logout</a>
+            <a href="movies.html">Quản lý phim</a>
+            <a href="categories.html">Danh sách thể loại</a>
+            <a href="actors.html">Đạo diễn & diễn viên</a>
+            <a href="users.html">Người dùng</a>
+            <a href="reviews.html" class="active">Bình luận</a>
+            <a href="#" id="logoutButton">Đăng xuất</a>
         </div>
 
         <div class="main">
             <div class="header">
-                <h1>Manage Reviews</h1>
+                <h1>Quản lý bình luận</h1>
                 <img src="https://icons.veryicon.com/png/o/miscellaneous/yellow-simple-icon/avatar-18.png" alt="User Avatar">
             </div>
 
             <div class="products">
-                <h3>Review List</h3>
+                <h3>Danh sách đánh giá</h3>
                 <table>
                     <thead>
                         <tr>
-                            <th>User</th>
-                            <th>Movie</th>
-                            <th>Rating</th>
-                            <th>Review</th>
-                            <th>Actions</th>
+                            <th>Người dùng</th>
+                            <th>Tên phim</th>
+                            <th>Đánh giá</th>
+                            <th>Bình luận</th>
+                            <th>Thao tác</th>
                         </tr>
                     </thead>
                     <tbody>
