--- a/FrontEnd/signup.html
+++ b/FrontEnd/signup.html
@@ -47,7 +47,7 @@
                         <nav class="header__menu mobile-menu">
                             <ul>
                                 <li><a href="./index.html">Trang chủ</a></li>
-                                <li><a href="./categories.html">Thể loại <span class="arrow_carrot-down"></span></a>
+                                <li><a href="./categories.html?category=tat-ca-the-loai">Thể loại <span class="arrow_carrot-down"></span></a>
                                     <ul class="dropdown">
                                     </ul>
                                 </li>
