--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -46,7 +46,7 @@
                         <nav class="header__menu mobile-menu">
                             <ul>
                                 <li><a href="./index.html">Trang chủ</a></li>
-                                <li><a href="./categories.html">Thể loại <span class="arrow_carrot-down"></span></a>
+                                <li><a href="./categories.html?category=tat-ca-the-loai">Thể loại <span class="arrow_carrot-down"></span></a>
                                     <ul class="dropdown">
                                     </ul>
                                 </li>
@@ -143,7 +143,7 @@
 
                         </script>
                         
-                        <a href="#" class="forget_pass">Quên mật khẩu?</a>
+                        <a href="forgetpassword.html" class="forget_pass">Quên mật khẩu?</a>
                     </div>
                 </div>
                 <div class="col-lg-6">
